cleaning code, fix bug of server, problem with mutex

--- a/Other/Server_RTAI/include/TCP_RTAI/ServerFile.cfg
+++ b/Other/Server_RTAI/include/TCP_RTAI/ServerFile.cfg
@@ -6,18 +6,18 @@ process(
 	RTAI2Node  = Joy
 	IP_RTAI  = 140.78.133.43
 	PORT_RTAI  = 1101
-	DEBUG = yes
+	DEBUG = no
 )
 
 process(
 	name = Process_2
-	SHM_IN = SHM_2_IN
-	SHM_OUT = SHM_2_OUT
-	Node2RTAI  = Joy
-	RTAI2Node  = Joy
+	SHM_IN = SHMIN_2
+	SHM_OUT = SHMOUT_2
+	Node2RTAI  = Twist
+	RTAI2Node  = odom
 	IP_RTAI  = 140.78.133.43
 	PORT_RTAI  = 1101
-	DEBUG = yes
+	DEBUG = no
 )
 
 process(
@@ -28,6 +28,6 @@ process(
 	RTAI2Node  = odom
 	IP_RTAI  = 140.78.133.43
 	PORT_RTAI  = 1101
-	DEBUG = yes
+	DEBUG = no
 )
 
