--- a/Drivers/CB_TCP_RTAI/include/TCP_RTAI/process_1.cfg
+++ b/Drivers/CB_TCP_RTAI/include/TCP_RTAI/process_1.cfg
@@ -1,10 +1,12 @@
 process(
 	name = Process_1
-	SHM = SHM_1
-	Subscriber = joy
-	Publisher = maki2
-	Node2RTAI  = Joy
-	RTAI2Node  = Joy
-	IP_RTAI  = 127.0.0.1
+	SHM_IN = SHM_3_IN
+	SHM_OUT = SHM_3_OUT
+	Subscriber = cmd_vel
+	Publisher = odom_1
+ 	Node2RTAI  = Twist
+	RTAI2Node  = odom
+	IP_RTAI  = 140.78.133.43
 	PORT_RTAI  = 1101
+	DEBUG = no
 )
