--- a/Other/Server_RTAI/include/TCP_RTAI/ServerFile.cfg
+++ b/Other/Server_RTAI/include/TCP_RTAI/ServerFile.cfg
@@ -6,7 +6,7 @@ process(
 	RTAI2Node  = Joy
 	IP_RTAI  = 140.78.133.43
 	PORT_RTAI  = 1101
-	DEBUG = no
+	DEBUG = yes
 )
 
 process(
@@ -17,7 +17,7 @@ process(
 	RTAI2Node  = odom
 	IP_RTAI  = 140.78.133.43
 	PORT_RTAI  = 1101
-	DEBUG = no
+	DEBUG = yes
 )
 
 process(
@@ -28,6 +28,6 @@ process(
 	RTAI2Node  = odom
 	IP_RTAI  = 140.78.133.43
 	PORT_RTAI  = 1101
-	DEBUG = no
+	DEBUG = yes
 )
 
